--- a/xcz/XCZWorksViewController.xib
+++ b/xcz/XCZWorksViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XCZWorksViewController">
             <connections>
                 <outlet property="searchDisplayController" destination="VVx-Z8-HLV" id="ygO-pk-dyG"/>
                 <outlet property="tableView" destination="ySm-8j-EGb" id="PWs-9o-rHk"/>
-                <outlet property="topConstraint" destination="7bo-9Z-ToD" id="V0e-ne-YYR"/>
                 <outlet property="view" destination="h3Y-hg-Wfc" id="1pL-p4-t4Y"/>
             </connections>
         </placeholder>
